--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "node-telegram-bot-api": "^0.30.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "tmp": "^0.2.1"
   },
   "devDependencies": {},
   "repository": {
